Update encoding factory unit tests. Simplify the EncodingFactory internal implementation.